# CESAR.school-imersao_python

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
ATV01_lista_exercicios/: README.md  pyproject.toml  ruff.toml
ATV01_lista_exercicios/.devcontainer/: docker-compose.yml
ATV01_lista_exercicios/src/: q02.py  q04.py  q06.py  q07.py  q08.py
src/ATV01/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py
src/ATV03/: communs  q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py
src/ATV04/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py
src/ATV05/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py
src/ATV06/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py
src/ATV07/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py
src/ATV08/: q01.py  q02.py  q03.py  q04.py
src/communs/: util.py
src/projeto_final/: MINI_WORLD.md  README.md  main.py  mem_db.py  requirements.txt
src/projeto_final/telas/: area_comum.py  morador.py  principal.py  reserva.py  template.py  unidade_habitacional.py
